--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ h6 {
 
 body {
     font-family: 'Roboto Condensed', 'Open Sans', sans-serif;
-    background-color: black;
+    background-color: black !important;
 }
 
 body.lock {
